--- a/s3/index.html
+++ b/s3/index.html
@@ -3,24 +3,24 @@
         <title>My First Webpage</title>
     </head>
     <body>
-        <h1>I love coffee</h1>
+        <h1>I REALLY love coffee!</h1>
         <p>Hello world!</p>
     </body>
 
     <img src="coffee.jpg" width=500/>
 
     <!-- CORS demo -->
-    <!-- <div id="tofetch"/>
+    <div id="tofetch"/>
     <script>
         var tofetch = document.getElementById("tofetch");
 
-        fetch('extra-page.html')
+        fetch('http://com.varunmuriyanat.bucket.other-domain.s3-website-us-east-1.amazonaws.com/extra-page.html')
         .then((response) => { 
             return response.text();
         })
         .then((html) => {
             tofetch.innerHTML = html     
         });
-    </script> -->
+    </script>
 </html>
 
